fix: opening the flag panel shifts the main table slightly (#2994)

--- a/frontend/web/styles/project/_modals.scss
+++ b/frontend/web/styles/project/_modals.scss
@@ -189,7 +189,7 @@ $side-width: 660px;
 
 .modal-open {
   position: relative;
-  padding-right: 0 !important;
+  padding-right: 0;
   overflow: hidden;
 }
 
